Added HTML5 DOCTYPE to worm.html and reformatted tags

--- a/worm.html
+++ b/worm.html
@@ -1,9 +1,12 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<title>Canvas</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script src="js/worm.js"></script>
 	</head>
 	<body>
 		<canvas id="game" width="720" height="500"></canvas>
-	</body><style type="text/css"></style>
+	</body>
 </html>
