--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<script>hljs.initHighlightingOnLoad();</script>
 	</head>
 	<body>
-		<section>
-			<h1>Collaborative two-player<br/>item-driven snake</h1>
+		<h1>Collaborative two-player<br/>item-driven snake</h1>
+		<section id="main">
 			<p>We've taken the classic game of snake and updated it, adding a large number of features to make a <strong>challenging, innovative</strong> game. We've thrown aside imperative programming and created a <strong>beautifully simple</strong> system of <strong>functionally-defined</strong> items. We've implemented a variety of these items, including items that <strong>grow, shrink, destroy, slow,</strong> and even <strong>teleport</strong> a player's snake across the board. Even better, we've made new items incredibly easy to create. Just check out the code needed to create a portal object, <strong>taken from our project:</strong></p>
 			<pre>
 <code class="javascript">57    var PORTAL_ACTION = function(player) {
