Renamed worm game to snake game

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 59    	worms[player].position.y = getRandomY();
 60    }</code></pre>
 			<p>Also, we've changed the classical snake paradigm to a <strong>collaborative</strong> two-player game. <strong>Players must work together</strong> to coordinate collecting food, sharing items, and avoiding collision as they struggle for a high score.</p>
-			<p>Sound interesting? Check out the <a href="">instructions</a>, and then continue to <a href="">our game</a>.</p>
+			<p>Sound interesting? Check out the <a href="">instructions</a>, and then continue to <a href="snake.html">our game</a>.</p>
 		</section>
 	</body>
 </html>
