--- a/snake.html
+++ b/snake.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<title>Snake</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script src="js/worm.js"></script>
+		<script src="js/snake.js"></script>
 	</head>
 	<body>
 		<canvas id="game" width="720" height="500"></canvas>
