Added additional instructions

--- a/instructions.html
+++ b/instructions.html
@@ -11,6 +11,24 @@
 	<body>
 		<h1>Instructions</h1>
 		<section id="instructions">
+			<h2>Controls</h2>
+			<ul>
+				<li>Arrow Keys - Player 1</li>
+				<li>W, A, S, D - Player 2</li>
+			</ul>
+			<h2>Unusual controls</h2>
+			<ul>
+				<li>p - Pause the game</li>
+				<li>1 - Set the game to one-player mode and reset</li>
+				<li>2 - Set the game to two-player mode and reset</li>
+			</ul>
+			<h2>Testing controls</h2>
+			<ul>
+				<li>g - Grow all snakes on the board</li>
+				<li>\ - Reset the game and high scores</li>
+			</ul>
+		</section>
+		<section id="images">
 			<h2>Items</h2>
 			<img src="images/items.png" alt="Snake game instructions">
 			<h2>Game layout</h2>
