--- a/snake.html
+++ b/snake.html
@@ -3,10 +3,17 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<title>Snake</title>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:100,400' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script src="js/snake.js"></script>
 	</head>
 	<body>
+		<h1>Snake</h1>
 		<canvas id="game" width="720" height="500"></canvas>
+		<h2>Items</h2>
+		<img src="images/items.png" alt="Snake game instructions">
 	</body>
 </html>
