Fixed alt text for images

--- a/instructions.html
+++ b/instructions.html
@@ -32,7 +32,7 @@
 			<h2>Items</h2>
 			<img src="images/items.png" alt="Snake game instructions">
 			<h2>Game layout</h2>
-			<img src="images/instructions.png" alt="Snake game instructions">
+			<img src="images/instructions.png" alt="Items used in snake game">
 		</section>
 	</body>
 </html>
