--- a/snake.html
+++ b/snake.html
@@ -14,6 +14,6 @@
 		<h1>Snake</h1>
 		<canvas id="game" width="720" height="500"></canvas>
 		<h2>Items</h2>
-		<img src="images/items.png" alt="Snake game instructions">
+		<img src="images/items.png" alt="Items used in snake game">
 	</body>
 </html>
